--- a/feed/testfeed.html
+++ b/feed/testfeed.html
@@ -6,13 +6,16 @@
   <link>Ссылка на рубрику</link>
   <description>description </description>
   <item>
+    <id>1</id>
     <title> item title</title>
     <link>link 1</link>
+    <price>100</price>
     <description>description</description>
   </item>
   <item>
     <title> item title II</title>
     <link>link 2</link>
+    <price>100</price>
     <description>description 2</description>
   </item>
 </channel>
