--- a/feed/testfeed.html
+++ b/feed/testfeed.html
@@ -8,15 +8,41 @@
   <item>
     <id>1</id>
     <title> item title</title>
-    <link>link 1</link>
+    <availability></availability>
+    <condition></condition>
+    <brand>    </brand>
+    <gtin></gtin>
+    <mpn></mpn>
+    <link>https://drdd.github.io/ddpresent/feed/testfeed.html</link>
+    <image_link>https://drdd.github.io/ddpresent/feed/testfeed.html</image_link>
     <price>100</price>
     <description>description</description>
   </item>
   <item>
-    <title> item title II</title>
-    <link>link 2</link>
+    <id>2</id>
+    <title> item title 2</title>
+    <availability></availability>
+    <condition></condition>
+    <brand>    </brand>
+    <gtin></gtin>
+    <mpn></mpn>
+    <link>https://drdd.github.io/ddpresent/feed/testfeed.html</link>
+    <image_link>https://drdd.github.io/ddpresent/feed/testfeed.html</image_link>
     <price>100</price>
-    <description>description 2</description>
+    <description>description</description>
+  </item>
+  <item>
+    <id>3</id>
+    <title> item title 3</title>
+    <availability></availability>
+    <condition></condition>
+    <brand>    </brand>
+    <gtin></gtin>
+    <mpn></mpn>
+    <link>https://drdd.github.io/ddpresent/feed/testfeed.html</link>
+    <image_link>https://drdd.github.io/ddpresent/feed/testfeed.html</image_link>
+    <price>100</price>
+    <description>description</description>
   </item>
 </channel>
 
