--- a/feed/testfeed.html
+++ b/feed/testfeed.html
@@ -8,11 +8,11 @@
   <item>
     <id>1</id>
     <title> item title</title>
-    <availability></availability>
-    <condition></condition>
-    <brand>    </brand>
-    <gtin></gtin>
-    <mpn></mpn>
+    <availability>discontinued</availability>
+    <condition>new</condition>
+    <brand>dr.DD</brand>
+    <gtin>481234567890К</gtin>
+    <mpn>GO12345OOGLE</mpn>
     <link>https://drdd.github.io/ddpresent/feed/testfeed.html</link>
     <image_link>https://drdd.github.io/ddpresent/feed/testfeed.html</image_link>
     <price>100</price>
@@ -21,11 +21,11 @@
   <item>
     <id>2</id>
     <title> item title 2</title>
-    <availability></availability>
-    <condition></condition>
-    <brand>    </brand>
-    <gtin></gtin>
-    <mpn></mpn>
+    <availability>available for order</availability>
+    <condition>new</condition>
+    <brand>dr.DD</brand>
+    <gtin>481234567890К</gtin>
+    <mpn>GO12345OOGLE</mpn>
     <link>https://drdd.github.io/ddpresent/feed/testfeed.html</link>
     <image_link>https://drdd.github.io/ddpresent/feed/testfeed.html</image_link>
     <price>100</price>
@@ -34,11 +34,11 @@
   <item>
     <id>3</id>
     <title> item title 3</title>
-    <availability></availability>
-    <condition></condition>
-    <brand>    </brand>
-    <gtin></gtin>
-    <mpn></mpn>
+    <availability>preorder</availability>
+    <condition>new</condition>
+    <brand>dr.DD</brand>
+    <gtin>481234567890К</gtin>
+    <mpn>GO12345OOGLE</mpn>
     <link>https://drdd.github.io/ddpresent/feed/testfeed.html</link>
     <image_link>https://drdd.github.io/ddpresent/feed/testfeed.html</image_link>
     <price>100</price>
