--- a/feed/testfeed.html
+++ b/feed/testfeed.html
@@ -17,6 +17,7 @@
     <image_link>https://drdd.github.io/ddpresent/feed/testfeed.html</image_link>
     <price>100</price>
     <description>description</description>
+    <google_product_category>Software &gt; Video Game Software</google_product_category>
   </item>
   <item>
     <id>2</id>
@@ -30,6 +31,7 @@
     <image_link>https://drdd.github.io/ddpresent/feed/testfeed.html</image_link>
     <price>100</price>
     <description>description</description>
+    <google_product_category>Software &gt; Video Game Software</google_product_category>
   </item>
   <item>
     <id>3</id>
@@ -43,6 +45,7 @@
     <image_link>https://drdd.github.io/ddpresent/feed/testfeed.html</image_link>
     <price>100</price>
     <description>description</description>
+    <google_product_category>Software &gt; Video Game Software</google_product_category>
   </item>
 </channel>
 
