--- a/feed/testfeed.html
+++ b/feed/testfeed.html
@@ -11,7 +11,7 @@
     <availability>discontinued</availability>
     <condition>new</condition>
     <brand>dr.DD</brand>
-    <gtin>481234567890К</gtin>
+    <gtin>3234567890126</gtin>
     <mpn>GO12345OOGLE</mpn>
     <link>https://drdd.github.io/ddpresent/feed/testfeed.html</link>
     <image_link>https://drdd.github.io/ddpresent/feed/testfeed.html</image_link>
@@ -25,7 +25,7 @@
     <availability>available for order</availability>
     <condition>new</condition>
     <brand>dr.DD</brand>
-    <gtin>481234567890К</gtin>
+    <gtin>3234567890126</gtin>
     <mpn>GO12345OOGLE</mpn>
     <link>https://drdd.github.io/ddpresent/feed/testfeed.html</link>
     <image_link>https://drdd.github.io/ddpresent/feed/testfeed.html</image_link>
@@ -39,7 +39,7 @@
     <availability>preorder</availability>
     <condition>new</condition>
     <brand>dr.DD</brand>
-    <gtin>481234567890К</gtin>
+    <gtin>3234567890126</gtin>
     <mpn>GO12345OOGLE</mpn>
     <link>https://drdd.github.io/ddpresent/feed/testfeed.html</link>
     <image_link>https://drdd.github.io/ddpresent/feed/testfeed.html</image_link>
